Remove fixed header height to make all it's content visible

--- a/style.css
+++ b/style.css
@@ -343,7 +343,6 @@ li {
   /* header */
   #header {
     padding: 15px;
-    height: 70vh;
   }
 
   #header i {
